--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -8,7 +8,12 @@ h1{
 	font-size: 50px;
 	color: white;
 	text-align: center;
+}
 
+h2{
+    font-family: verdana;
+    font-weight: 300;
+    font-size: 42px;
 }
 
 h5{
@@ -16,3 +21,16 @@ h5{
 	text-align: center;
 	font-size: 16px;
 }
+
+p{
+	font-family: verdana;
+	font-size: 21px;
+	color: gray;
+	text-align: center;
+}
+
+#iphone{
+	text-align: center;
+	background-color: black;
+}
+
