--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -14,6 +14,8 @@ h2{
     font-family: verdana;
     font-weight: 300;
     font-size: 42px;
+    color: white;
+    text-align: center;
 }
 
 h5{
@@ -29,8 +31,16 @@ p{
 	text-align: center;
 }
 
-#iphone{
-	text-align: center;
-	background-color: black;
+img.iphone{
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+   background-color: black;
 }
 
+img.tent{
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+   text-align: center;
+}
